--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 hello world!
+$ git checkout iss53
+Switched to branch "iss53"
+$ vim index.html
+$ git commit -a -m 'finished the new footer [issue 53]'
+[iss53]: created ad82d7a: "finished the new footer [issue 53]"
+1 files changed, 1 insertions(+), 0 deletions(-)
